SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

SET default_tablespace = '';
SET default_table_access_method = heap;

CREATE TABLE public.auth_group (
    id integer NOT NULL,
    name character varying(150) NOT NULL
);

ALTER TABLE public.auth_group ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.auth_group_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.auth_group_permissions (
    id bigint NOT NULL,
    group_id integer NOT NULL,
    permission_id integer NOT NULL
);

ALTER TABLE public.auth_group_permissions ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.auth_group_permissions_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.auth_permission (
    id integer NOT NULL,
    name character varying(255) NOT NULL,
    content_type_id integer NOT NULL,
    codename character varying(100) NOT NULL
);

ALTER TABLE public.auth_permission ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.auth_permission_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.users_user (
    id bigint NOT NULL,
    password character varying(128) NOT NULL,
    last_login timestamp with time zone,
    is_superuser boolean NOT NULL,
    first_name character varying(150) NOT NULL,
    last_name character varying(150) NOT NULL,
    is_staff boolean NOT NULL,
    is_active boolean NOT NULL,
    date_joined timestamp with time zone NOT NULL,
    email character varying(254) NOT NULL,
    role character varying(10) NOT NULL,
    organization_name character varying(255) NOT NULL,
    created_at timestamp with time zone NOT NULL
);

ALTER TABLE public.users_user ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.users_user_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.users_user_groups (
    id bigint NOT NULL,
    user_id bigint NOT NULL,
    group_id integer NOT NULL
);

ALTER TABLE public.users_user_groups ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.users_user_groups_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.users_user_user_permissions (
    id bigint NOT NULL,
    user_id bigint NOT NULL,
    permission_id integer NOT NULL
);

ALTER TABLE public.users_user_user_permissions ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.users_user_user_permissions_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.sites_site (
    id bigint NOT NULL,
    name character varying(255) NOT NULL,
    url character varying(200) NOT NULL,
    site_uuid uuid NOT NULL,
    widget_settings jsonb NOT NULL,
    working_hours jsonb NOT NULL,
    auto_reply_enabled boolean NOT NULL,
    auto_reply_message text NOT NULL,
    telegram_bot_token character varying(255) NOT NULL,
    telegram_referral_code character varying(50) NOT NULL,
    created_at timestamp with time zone NOT NULL,
    owner_id bigint NOT NULL
);

ALTER TABLE public.sites_site ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.sites_site_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.chats_chat (
    id bigint NOT NULL,
    client_name character varying(255) NOT NULL,
    client_email character varying(254) NOT NULL,
    telegram_username character varying(255) NOT NULL,
    status character varying(20) NOT NULL,
    channel character varying(10) NOT NULL,
    created_at timestamp with time zone NOT NULL,
    updated_at timestamp with time zone NOT NULL,
    closed_at timestamp with time zone,
    assigned_manager_id bigint,
    site_id bigint NOT NULL,
    telegram_chat_id bigint,
    telegram_user_id bigint
);

ALTER TABLE public.chats_chat ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chats_chat_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.chats_message (
    id bigint NOT NULL,
    sender_type character varying(10) NOT NULL,
    content text NOT NULL,
    "timestamp" timestamp with time zone NOT NULL,
    chat_id bigint NOT NULL,
    sender_id bigint
);

ALTER TABLE public.chats_message ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chats_message_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.chats_file (
    id bigint NOT NULL,
    file character varying(100) NOT NULL,
    filename character varying(255) NOT NULL,
    file_size integer NOT NULL,
    mime_type character varying(100) NOT NULL,
    uploaded_at timestamp with time zone NOT NULL,
    message_id bigint NOT NULL,
    CONSTRAINT chats_file_file_size_check CHECK ((file_size >= 0))
);

ALTER TABLE public.chats_file ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chats_file_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.chats_rating (
    id bigint NOT NULL,
    rating smallint NOT NULL,
    comment text NOT NULL,
    created_at timestamp with time zone NOT NULL,
    chat_id bigint NOT NULL,
    manager_id bigint NOT NULL,
    CONSTRAINT chats_rating_rating_check CHECK ((rating >= 0))
);

ALTER TABLE public.chats_rating ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chats_rating_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.chats_template (
    id bigint NOT NULL,
    title character varying(255) NOT NULL,
    content text NOT NULL,
    hotkey character varying(50) NOT NULL,
    created_at timestamp with time zone NOT NULL,
    user_id bigint
);

ALTER TABLE public.chats_template ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chats_template_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.chats_managerqueue (
    id bigint NOT NULL,
    "position" integer NOT NULL,
    is_active boolean NOT NULL,
    manager_id bigint NOT NULL,
    owner_id bigint NOT NULL,
    CONSTRAINT chats_managerqueue_position_check CHECK (("position" >= 0))
);

ALTER TABLE public.chats_managerqueue ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chats_managerqueue_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.chats_managerstatus (
    id bigint NOT NULL,
    status character varying(10) NOT NULL,
    changed_at timestamp with time zone NOT NULL,
    manager_id bigint NOT NULL
);

ALTER TABLE public.chats_managerstatus ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chats_managerstatus_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.telegram_telegramuser (
    id bigint NOT NULL,
    telegram_id bigint NOT NULL,
    username character varying(255) NOT NULL,
    first_name character varying(255) NOT NULL,
    last_name character varying(255) NOT NULL,
    created_at timestamp with time zone NOT NULL
);

ALTER TABLE public.telegram_telegramuser ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.telegram_telegramuser_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.django_content_type (
    id integer NOT NULL,
    app_label character varying(100) NOT NULL,
    model character varying(100) NOT NULL
);

ALTER TABLE public.django_content_type ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.django_content_type_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.django_migrations (
    id bigint NOT NULL,
    app character varying(255) NOT NULL,
    name character varying(255) NOT NULL,
    applied timestamp with time zone NOT NULL
);

ALTER TABLE public.django_migrations ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.django_migrations_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

CREATE TABLE public.django_session (
    session_key character varying(40) NOT NULL,
    session_data text NOT NULL,
    expire_date timestamp with time zone NOT NULL
);

CREATE TABLE public.django_admin_log (
    id integer NOT NULL,
    action_time timestamp with time zone NOT NULL,
    object_id text,
    object_repr character varying(200) NOT NULL,
    action_flag smallint NOT NULL,
    change_message text NOT NULL,
    content_type_id integer,
    user_id bigint NOT NULL,
    CONSTRAINT django_admin_log_action_flag_check CHECK ((action_flag >= 0))
);

ALTER TABLE public.django_admin_log ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.django_admin_log_id_seq START WITH 1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
);

ALTER TABLE ONLY public.auth_group               ADD CONSTRAINT auth_group_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.auth_group_permissions   ADD CONSTRAINT auth_group_permissions_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.auth_permission          ADD CONSTRAINT auth_permission_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.users_user               ADD CONSTRAINT users_user_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.users_user_groups        ADD CONSTRAINT users_user_groups_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.users_user_user_permissions ADD CONSTRAINT users_user_user_permissions_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.sites_site               ADD CONSTRAINT sites_site_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.chats_chat               ADD CONSTRAINT chats_chat_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.chats_message            ADD CONSTRAINT chats_message_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.chats_file               ADD CONSTRAINT chats_file_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.chats_rating             ADD CONSTRAINT chats_rating_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.chats_template           ADD CONSTRAINT chats_template_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.chats_managerqueue       ADD CONSTRAINT chats_managerqueue_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.chats_managerstatus      ADD CONSTRAINT chats_managerstatus_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.telegram_telegramuser    ADD CONSTRAINT telegram_telegramuser_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.django_content_type      ADD CONSTRAINT django_content_type_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.django_migrations        ADD CONSTRAINT django_migrations_pkey PRIMARY KEY (id);
ALTER TABLE ONLY public.django_session           ADD CONSTRAINT django_session_pkey PRIMARY KEY (session_key);
ALTER TABLE ONLY public.django_admin_log         ADD CONSTRAINT django_admin_log_pkey PRIMARY KEY (id);

ALTER TABLE ONLY public.auth_group               ADD CONSTRAINT auth_group_name_key UNIQUE (name);
ALTER TABLE ONLY public.auth_group_permissions   ADD CONSTRAINT auth_group_permissions_group_id_permission_id_0cd325b0_uniq UNIQUE (group_id, permission_id);
ALTER TABLE ONLY public.auth_permission          ADD CONSTRAINT auth_permission_content_type_id_codename_01ab375a_uniq UNIQUE (content_type_id, codename);
ALTER TABLE ONLY public.users_user               ADD CONSTRAINT users_user_email_key UNIQUE (email);
ALTER TABLE ONLY public.users_user_groups        ADD CONSTRAINT users_user_groups_user_id_group_id_b88eab82_uniq UNIQUE (user_id, group_id);
ALTER TABLE ONLY public.users_user_user_permissions ADD CONSTRAINT users_user_user_permissions_user_id_permission_id_43338c45_uniq UNIQUE (user_id, permission_id);
ALTER TABLE ONLY public.sites_site               ADD CONSTRAINT sites_site_site_uuid_key UNIQUE (site_uuid);
ALTER TABLE ONLY public.sites_site               ADD CONSTRAINT sites_site_telegram_referral_code_key UNIQUE (telegram_referral_code);
ALTER TABLE ONLY public.chats_rating             ADD CONSTRAINT chats_rating_chat_id_key UNIQUE (chat_id);
ALTER TABLE ONLY public.chats_managerqueue       ADD CONSTRAINT chats_managerqueue_owner_id_manager_id_7c9c99de_uniq UNIQUE (owner_id, manager_id);
ALTER TABLE ONLY public.chats_managerstatus      ADD CONSTRAINT chats_managerstatus_manager_id_key UNIQUE (manager_id);
ALTER TABLE ONLY public.telegram_telegramuser    ADD CONSTRAINT telegram_telegramuser_telegram_id_key UNIQUE (telegram_id);
ALTER TABLE ONLY public.django_content_type      ADD CONSTRAINT django_content_type_app_label_model_76bd3d3b_uniq UNIQUE (app_label, model);

CREATE INDEX auth_group_name_a6ea08ec_like            ON public.auth_group USING btree (name varchar_pattern_ops);
CREATE INDEX auth_group_permissions_group_id_b120cbf9 ON public.auth_group_permissions USING btree (group_id);
CREATE INDEX auth_group_permissions_permission_id_84c5c92e ON public.auth_group_permissions USING btree (permission_id);
CREATE INDEX auth_permission_content_type_id_2f476e4b ON public.auth_permission USING btree (content_type_id);

CREATE INDEX users_user_email_243f6e77_like            ON public.users_user USING btree (email varchar_pattern_ops);
CREATE INDEX users_user_groups_user_id_5f6f5a90        ON public.users_user_groups USING btree (user_id);
CREATE INDEX users_user_groups_group_id_9afc8d0e       ON public.users_user_groups USING btree (group_id);
CREATE INDEX users_user_user_permissions_user_id_20aca447 ON public.users_user_user_permissions USING btree (user_id);
CREATE INDEX users_user_user_permissions_permission_id_0b93982e ON public.users_user_user_permissions USING btree (permission_id);

CREATE INDEX sites_site_owner_id_ec36f800              ON public.sites_site USING btree (owner_id);
CREATE INDEX sites_site_telegram_referral_code_e7b59bd8_like ON public.sites_site USING btree (telegram_referral_code varchar_pattern_ops);

CREATE INDEX chats_chat_site_id_5ce64f6a               ON public.chats_chat USING btree (site_id);
CREATE INDEX chats_chat_assigned_manager_id_59f3d983   ON public.chats_chat USING btree (assigned_manager_id);
CREATE INDEX chats_chat_telegram_chat_id_afdf7971      ON public.chats_chat USING btree (telegram_chat_id);
CREATE INDEX chats_chat_telegram_user_id_818a96a4      ON public.chats_chat USING btree (telegram_user_id);

CREATE INDEX chats_message_chat_id_f3080004            ON public.chats_message USING btree (chat_id);
CREATE INDEX chats_message_sender_id_4f3659eb          ON public.chats_message USING btree (sender_id);
CREATE INDEX chats_file_message_id_4d07d863            ON public.chats_file USING btree (message_id);
CREATE INDEX chats_rating_manager_id_d0ffb4e5          ON public.chats_rating USING btree (manager_id);
CREATE INDEX chats_template_user_id_eafb5ffc           ON public.chats_template USING btree (user_id);
CREATE INDEX chats_managerqueue_owner_id_29218e1d      ON public.chats_managerqueue USING btree (owner_id);
CREATE INDEX chats_managerqueue_manager_id_64346953    ON public.chats_managerqueue USING btree (manager_id);

CREATE INDEX django_session_expire_date_a5c62663       ON public.django_session USING btree (expire_date);
CREATE INDEX django_session_session_key_c0390e0f_like  ON public.django_session USING btree (session_key varchar_pattern_ops);
CREATE INDEX django_admin_log_content_type_id_c4bce8eb ON public.django_admin_log USING btree (content_type_id);
CREATE INDEX django_admin_log_user_id_c564eba6         ON public.django_admin_log USING btree (user_id);

ALTER TABLE ONLY public.auth_group_permissions
    ADD CONSTRAINT auth_group_permissions_group_id_fk      FOREIGN KEY (group_id)      REFERENCES public.auth_group(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.auth_group_permissions
    ADD CONSTRAINT auth_group_permissions_permission_id_fk FOREIGN KEY (permission_id) REFERENCES public.auth_permission(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.auth_permission
    ADD CONSTRAINT auth_permission_content_type_id_fk      FOREIGN KEY (content_type_id) REFERENCES public.django_content_type(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.django_admin_log
    ADD CONSTRAINT django_admin_log_content_type_id_fk     FOREIGN KEY (content_type_id) REFERENCES public.django_content_type(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.django_admin_log
    ADD CONSTRAINT django_admin_log_user_id_fk             FOREIGN KEY (user_id)        REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;

ALTER TABLE ONLY public.users_user_groups
    ADD CONSTRAINT users_user_groups_user_id_fk            FOREIGN KEY (user_id)        REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.users_user_groups
    ADD CONSTRAINT users_user_groups_group_id_fk           FOREIGN KEY (group_id)       REFERENCES public.auth_group(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.users_user_user_permissions
    ADD CONSTRAINT users_user_user_permissions_user_id_fk  FOREIGN KEY (user_id)        REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.users_user_user_permissions
    ADD CONSTRAINT users_user_user_permissions_perm_id_fk  FOREIGN KEY (permission_id)  REFERENCES public.auth_permission(id) DEFERRABLE INITIALLY DEFERRED;

ALTER TABLE ONLY public.sites_site
    ADD CONSTRAINT sites_site_owner_id_fk                  FOREIGN KEY (owner_id)       REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;

ALTER TABLE ONLY public.chats_chat
    ADD CONSTRAINT chats_chat_site_id_fk                   FOREIGN KEY (site_id)        REFERENCES public.sites_site(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.chats_chat
    ADD CONSTRAINT chats_chat_assigned_manager_id_fk       FOREIGN KEY (assigned_manager_id) REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;

ALTER TABLE ONLY public.chats_message
    ADD CONSTRAINT chats_message_chat_id_fk                FOREIGN KEY (chat_id)        REFERENCES public.chats_chat(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.chats_message
    ADD CONSTRAINT chats_message_sender_id_fk              FOREIGN KEY (sender_id)      REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;

ALTER TABLE ONLY public.chats_file
    ADD CONSTRAINT chats_file_message_id_fk                FOREIGN KEY (message_id)     REFERENCES public.chats_message(id) DEFERRABLE INITIALLY DEFERRED;

ALTER TABLE ONLY public.chats_rating
    ADD CONSTRAINT chats_rating_chat_id_fk                 FOREIGN KEY (chat_id)        REFERENCES public.chats_chat(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.chats_rating
    ADD CONSTRAINT chats_rating_manager_id_fk              FOREIGN KEY (manager_id)     REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;

ALTER TABLE ONLY public.chats_template
    ADD CONSTRAINT chats_template_user_id_fk               FOREIGN KEY (user_id)        REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;

ALTER TABLE ONLY public.chats_managerqueue
    ADD CONSTRAINT chats_managerqueue_owner_id_fk          FOREIGN KEY (owner_id)       REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE ONLY public.chats_managerqueue
    ADD CONSTRAINT chats_managerqueue_manager_id_fk        FOREIGN KEY (manager_id)     REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;

ALTER TABLE ONLY public.chats_managerstatus
    ADD CONSTRAINT chats_managerstatus_manager_id_fk       FOREIGN KEY (manager_id)     REFERENCES public.users_user(id) DEFERRABLE INITIALLY DEFERRED;
