erDiagram
    users_user {
        int id PK
        varchar_128 password
        timestamptz last_login
        bool is_superuser
        varchar_150 first_name
        varchar_150 last_name
        bool is_staff
        bool is_active
        timestamptz date_joined
        varchar_254 email UK
        varchar_10 role
        varchar_255 organization_name
        timestamptz created_at
    }

    sites_site {
        int id PK
        int owner_id FK
        varchar_255 name
        varchar_200 url
        uuid site_uuid UK
        jsonb widget_settings
        jsonb working_hours
        bool auto_reply_enabled
        text auto_reply_message
        varchar_255 telegram_bot_token
        varchar_50 telegram_referral_code UK
        timestamptz created_at
    }

    chats_chat {
        int id PK
        int site_id FK
        int assigned_manager_id FK
        varchar_255 client_name
        varchar_254 client_email
        varchar_255 telegram_username
        bigint telegram_user_id
        bigint telegram_chat_id
        varchar_20 status
        varchar_10 channel
        timestamptz created_at
        timestamptz updated_at
        timestamptz closed_at
    }

    chats_message {
        int id PK
        int chat_id FK
        int sender_id FK
        varchar_10 sender_type
        text content
        timestamptz timestamp
    }

    chats_file {
        int id PK
        int message_id FK
        varchar_100 file
        varchar_255 filename
        int file_size
        varchar_100 mime_type
        timestamptz uploaded_at
    }

    chats_rating {
        int id PK
        int chat_id FK "UNIQUE"
        int manager_id FK
        smallint rating
        text comment
        timestamptz created_at
    }

    chats_template {
        int id PK
        int user_id FK
        varchar_255 title
        text content
        varchar_50 hotkey
        timestamptz created_at
    }

    chats_managerqueue {
        int id PK
        int owner_id FK
        int manager_id FK
        int position
        bool is_active
    }

    chats_managerstatus {
        int id PK
        int manager_id FK "UNIQUE"
        varchar_10 status
        timestamptz changed_at
    }

    telegram_telegramuser {
        int id PK
        bigint telegram_id UK
        varchar_255 username
        varchar_255 first_name
        varchar_255 last_name
        timestamptz created_at
    }

    users_user ||--o{ sites_site : "owner_id"
    users_user |o--o{ chats_chat : "assigned_manager_id"
    users_user |o--o{ chats_message : "sender_id"
    users_user ||--o{ chats_rating : "manager_id"
    users_user |o--o{ chats_template : "user_id"
    users_user ||--|| chats_managerstatus : "manager_id"
    users_user ||--o{ chats_managerqueue : "owner_id"
    users_user ||--o{ chats_managerqueue : "manager_id"
    sites_site ||--o{ chats_chat : "site_id"
    chats_chat ||--o{ chats_message : "chat_id"
    chats_chat ||--o| chats_rating : "chat_id"
    chats_message ||--o{ chats_file : "message_id"
